# d-vecDB

./: ACTION_PLAN.md  BUGFIX_REPORT_v0.2.2.md  CLIENT_API_COMPLETENESS.md  Cargo.toml  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE_v0.2.4.md  GAP_ANALYSIS.md  INDEX_REBUILD_FIX_v0.2.3.md  METADATA_PERSISTENCE.md  METADATA_PERSISTENCE_SUMMARY.md  PERFORMANCE_OPTIMIZATION_LOG.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_STABILITY_v0.2.6.md  PYPI_INSTALLATION.md  QDRANT_FEATURES.md  QUICK_FIX_REFERENCE.md  QUICK_START_RECOVERY.md  README.md  RECOVERY_PATCH_SUMMARY.md  RECOVERY_PATCH_v0.2.0.md  SESSION_RECORD_2025-10-28.md  STABILITY_FIXES.md  STORAGE_FORMAT_FIX.md  TROUBLESHOOTING_400_ERRORS.md  UBUNTU_2204_SETUP.md  debug_vectors.sh  migrate_vectors.rs  test_insert.py  test_insert.sh
.claude/: settings.local.json
benchmarks/competitive/: BENCHMARK_READY.md  HARDWARE_REQUIREMENTS.md  QUICKSTART.md  README.md  RUNNING_BENCHMARKS.md  benchmark_base.py  benchmark_dvecdb.py  benchmark_pinecone.py  benchmark_qdrant.py  config.yaml  data_generator.py  generate_report.py  requirements.txt  run_benchmarks.py  run_full_benchmark.sh
cli/src/: main.rs
client/: Cargo.toml
client/src/: grpc_client.rs  lib.rs  rest_client.rs
cluster/: Cargo.toml
cluster/src/: discovery.rs  failover.rs  health.rs  lib.rs  manager.rs  node.rs  router.rs  sharding.rs  types.rs
common/: Cargo.toml
common/src/: error.rs  filter.rs  gpu.rs  lib.rs  quantization.rs  search_api.rs  simd.rs  sparse.rs  types.rs
common/tests/: search_api_test.rs  sparse_vector_test.rs
d-vecdb-server/: Cargo.toml
d-vecdb-server-builds/: BUILD_SUMMARY.md  Dockerfile  README.md  build-all.sh  vectordb-server-macos-arm64
d-vecdb-server-builds/.github/workflows/: build-binaries.yml
d-vecdb-server-python/: README.md  pyproject.toml  setup.py
d-vecdb-server-python/d_vecdb_server.egg-info/: PKG-INFO
docs/: COMPETITIVE_BENCHMARKING_SUMMARY.md  ENGINEERING_GUIDE.md  IMPLEMENTATION_STATUS.md  MULTI_NODE_ARCHITECTURE.md  PRODUCTION_IMPROVEMENTS_SUMMARY.md  PRODUCTION_READINESS_ROADMAP.md  SELF_HEALING_RECOVERY.md
index/: Cargo.toml
index/src/: hnsw.rs  hnsw_rs_index.rs  lib.rs
kubernetes/: README.md
kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
kubernetes/overlays/development/: kustomization.yaml
kubernetes/overlays/production/: kustomization.yaml
proto/proto/: vectordb.proto
python-client/: MANIFEST.in  README.md  colab-vecdb.ipynb  colab-vecdb1.py  fixed_connection_example.py  fixed_vector_insertion.py  google_colab_complete_example.py  setup.py  test_ngrok_connection.py  test_search.py  updated_working_code.py  your_code_fixed.py
python-client/d_vecdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python-client/vectordb_client/: __init__.py
python-client/vectordb_client.egg-info/: PKG-INFO
scripts/.claude/: settings.local.json
server/: Cargo.toml
server/src/: auth.rs  grpc.rs  health.rs  lib.rs  rest.rs
storage/: Cargo.toml
storage/src/: lib.rs  mmap.rs  recovery.rs  snapshot.rs  wal.rs
typescript-client/: .gitignore  .npmignore  BUGFIX_REPORT_v0.2.2.md  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  jest.config.js  package-lock.json  package.json  publish.sh
typescript-client/src/: client.ts  exceptions.ts  index.ts  rest-client.ts  types.ts
vectorstore/: Cargo.toml
vectorstore/src/: lib.rs
vectorstore/tests/: integration_test.rs
(+7 files in other folders)
