[workspace]
members = [
    "vectorstore",
    "index",
    "server",
    "storage",
    "client",
    "proto",
    "common",
    "cli",
    "cluster",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures-intrusive = "0.5"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Networking
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Storage and persistence
memmap2 = "0.9"
parking_lot = "0.12"

# Math and SIMD
nalgebra = "0.32"
simdeez = { version = "2.0.0-dev5" }
half = "2.3"
rayon = "1.8"  # Parallel processing
hnsw_rs = "0.3"  # Optimized HNSW (SIMD disabled for ARM compatibility)

# GPU acceleration
wgpu = "0.20"
pollster = "0.3"  # Sync GPU operations
bytemuck = { version = "1.14", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
async-trait = "0.1"
dashmap = "6.0"

# Development
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true