[package]
name = "vectordb-cluster"
version = "0.2.0"
edition = "2021"
authors = ["d-vecDB Contributors"]
description = "Cluster management for d-vecDB"
license = "MIT"

[dependencies]
vectordb-common = { path = "../common" }
vectordb-proto = { path = "../proto" }
vectordb-storage = { path = "../storage" }
vectordb-vectorstore = { path = "../vectorstore" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Networking
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
dashmap = "6.0"
async-trait = { workspace = true }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
