[package]
name = "vectordb-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
nalgebra = { workspace = true }
half = { workspace = true }
simdeez = { workspace = true }
rayon = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
futures-intrusive = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
vectordb-index = { path = "../index" }

[[bench]]
name = "vector_performance"
harness = false